# GlobileHub

./: BUILD  WORKSPACE
angular-real-world/angular/: BUILD.bazel  package.json
angular-real-world/angular/src/: BUILD
angular-real-world/angular/src/app1/: BUILD.bazel
angular-real-world/angular/src/app1/app/: BUILD.bazel
angular-real-world/angular/src/app1/app/hello-world/: BUILD.bazel
angular-real-world/angular/src/app1/app/home/: BUILD.bazel
angular-real-world/angular/src/app1/app/library1/: BUILD.bazel
angular-real-world/angular/src/app1/app/library2/: BUILD.bazel
angular-real-world/angular/src/app1/app/library3/: BUILD.bazel
angular-real-world/angular/src/app1/app/library4/: BUILD.bazel
angular-real-world/angular/src/app1/shared/material/: BUILD.bazel
angular-real-world/angular/src/app10/: BUILD.bazel
angular-real-world/angular/src/app10/app/: BUILD.bazel
angular-real-world/angular/src/app10/app/hello-world/: BUILD.bazel
angular-real-world/angular/src/app10/app/library1/: BUILD.bazel
angular-real-world/angular/src/app10/app/library2/: BUILD.bazel
angular-real-world/angular/src/app10/app/library3/: BUILD.bazel
angular-real-world/angular/src/app10/app/library4/: BUILD.bazel
angular-real-world/angular/src/app10/app/todos/: BUILD.bazel
angular-real-world/angular/src/app10/shared/material/: BUILD.bazel
angular-real-world/angular/src/app2/app/: BUILD.bazel
angular-real-world/angular/src/app2/app/hello-world/: BUILD.bazel
angular-real-world/angular/src/app2/app/home/: BUILD.bazel
angular-real-world/angular/src/app2/app/library1/: BUILD.bazel
angular-real-world/angular/src/app2/app/library2/: BUILD.bazel
angular-real-world/angular/src/app2/app/library3/: BUILD.bazel
angular-real-world/angular/src/app2/app/library4/: BUILD.bazel
angular-real-world/angular/src/app2/shared/material/: BUILD.bazel
angular-real-world/angular/src/app3/: BUILD.bazel
angular-real-world/angular/src/app3/app/: BUILD.bazel
angular-real-world/angular/src/app3/app/hello-world/: BUILD.bazel
angular-real-world/angular/src/app3/app/library1/: BUILD.bazel
angular-real-world/angular/src/app3/app/library2/: BUILD.bazel  library2.module.ts
angular-real-world/angular/src/app3/app/library3/: BUILD.bazel
angular-real-world/angular/src/app3/app/library4/: BUILD.bazel
angular-real-world/angular/src/app3/app/todos/: BUILD.bazel
angular-real-world/angular/src/app3/shared/material/: BUILD.bazel
angular-real-world/angular/src/app4/: BUILD.bazel  tsconfig.json
angular-real-world/angular/src/app4/app/: BUILD.bazel  app-routing.module.ts
angular-real-world/angular/src/app4/app/hello-world/: BUILD.bazel
angular-real-world/angular/src/app4/app/library1/: BUILD.bazel
angular-real-world/angular/src/app4/app/library2/: BUILD.bazel
angular-real-world/angular/src/app4/app/library3/: BUILD.bazel
angular-real-world/angular/src/app4/app/library4/: BUILD.bazel
angular-real-world/angular/src/app4/shared/material/: BUILD.bazel
angular-real-world/angular/src/app5/: BUILD.bazel
angular-real-world/angular/src/app5/app/: BUILD.bazel
angular-real-world/angular/src/app5/app/hello-world/: BUILD.bazel
angular-real-world/angular/src/app5/app/library1/: BUILD.bazel
angular-real-world/angular/src/app5/app/library2/: BUILD.bazel
angular-real-world/angular/src/app5/app/library3/: BUILD.bazel
angular-real-world/angular/src/app5/app/library4/: BUILD.bazel
angular-real-world/angular/src/app5/shared/material/: BUILD.bazel
angular-real-world/angular/src/app6/: BUILD.bazel
angular-real-world/angular/src/app6/app/: BUILD.bazel
angular-real-world/angular/src/app6/app/hello-world/: BUILD.bazel
angular-real-world/angular/src/app6/app/library1/: BUILD.bazel
angular-real-world/angular/src/app6/app/library2/: BUILD.bazel
angular-real-world/angular/src/app6/app/library3/: BUILD.bazel
angular-real-world/angular/src/app6/app/library4/: BUILD.bazel
angular-real-world/angular/src/app6/shared/material/: BUILD.bazel
angular-real-world/angular/src/app7/: BUILD.bazel
angular-real-world/angular/src/app7/app/: BUILD.bazel
angular-real-world/angular/src/app7/app/hello-world/: BUILD.bazel
angular-real-world/angular/src/app7/app/library1/: BUILD.bazel
angular-real-world/angular/src/app7/app/library2/: BUILD.bazel
angular-real-world/angular/src/app7/app/library3/: BUILD.bazel
angular-real-world/angular/src/app7/app/library4/: BUILD.bazel
angular-real-world/angular/src/app7/shared/material/: BUILD.bazel
angular-real-world/angular/src/app8/: BUILD.bazel
angular-real-world/angular/src/app8/app/: BUILD.bazel
angular-real-world/angular/src/app8/app/hello-world/: BUILD.bazel
angular-real-world/angular/src/app8/app/library1/: BUILD.bazel
angular-real-world/angular/src/app9/: BUILD.bazel
angular-real-world/angular/src/app9/app/: BUILD.bazel
(+10 files in other folders)
