load("@io_bazel_rules_sass//:defs.bzl", "sass_binary")
load("@npm_angular_bazel//:index.bzl", "ng_module")
load("@npm_bazel_typescript//:defs.bzl", "ts_library")

package(default_visibility = ["//:__subpackages__"])

# We don't import from these, but the generated ngfactory code will
NG_FACTORY_ADDED_IMPORTS = [
    "@npm//@angular/cdk",
    "@npm//@angular/material",
]

ng_module(
    name = "library1",
    srcs = [
        "library.component.ts",
        "library.module.ts",
    ],
    tsconfig = "//angular-real-world/angular/src/app10:tsconfig.json",
    deps = NG_FACTORY_ADDED_IMPORTS + [
        "//angular-real-world/angular/src/app10/app/library3",
        "//angular-real-world/angular/src/app10/app/library2",
        "@npm//@angular/core",
        "@npm//@angular/forms",
        "@npm//@angular/router",
        "@npm//date-fns"
    ],
)

# For testing from the root workspace of this repository with bazel_integration_test.
filegroup(
    name = "all_files",
    srcs = glob(["**/*"]),
)
