load("@npm_angular_bazel//:index.bzl", "ng_module")

package(default_visibility = ["//visibility:public"])

ng_module(
    name = "home",
    srcs = ["home.ts"],
    assets = ["home.html"],
    tsconfig = "//angular-real-world/angular/src:tsconfig.json",
    deps = [
        "@npm//@angular/core",
        "@npm//@angular/router",
    ],
)

# For testing from the root workspace of this repository with bazel_integration_test.
filegroup(
    name = "all_files",
    srcs = glob(["**/*"]),
)
